# nersc-refresh-announcements

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  example_overrides.json  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml  main.yml
schema/: plugin.json
src/: index.ts
style/: base.css
tests/: test_empty_announcement.py  test_nonempty_announcement.py
tests/test-server/: package-lock.json  package.json  server.js
